--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: c
 script:
-    - make re -C libft
-    - gcc main.c get_next_line.c libft/libft.a
-    - ./a.out get_next_line.c get_next_line.h
+    - make -C libft/ fclean && make -C libft/
+    - clang -Wall -Wextra -Werror -I libft/includes -o get_next_line.o -c get_next_line.c
+    - clang -Wall -Wextra -Werror -I libft/includes -o main.o -c main.c
+    - clang -o test_gnl main.o get_next_line.o -I libft/includes -L libft/ -lft
+    - ./test_gnl get_next_line.c get_next_line.h
 os:
     - osx
     - linux
