--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: c
 script:
-    - make -C libft/ fclean && make -C libft/
+    - env -i make -C libft/ fclean && make -C libft/
     - clang -Wall -Wextra -Werror -I libft/includes -o get_next_line.o -c get_next_line.c
     - clang -Wall -Wextra -Werror -I libft/includes -o main.o -c main.c
     - clang -o test_gnl main.o get_next_line.o -I libft/includes -L libft/ -lft
@@ -10,3 +10,5 @@ env:
 os:
     - osx
     - linux
+compiler:
+    - clang
