--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: thou <marvin@42.fr>                        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/03 17:40:06 by thou              #+#    #+#              #
-#    Updated: 2017/03/02 16:20:19 by thou             ###   ########.fr        #
+#    Updated: 2017/04/08 17:18:17 by thou             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -73,22 +73,23 @@ SRCS					=	$(addprefix $(SRC_DIR), $(SRC_BASE))
 OBJS					=	$(addprefix $(OBJ_DIR), $(SRC_BASE:.c=.o))
 NB						=	$(words $(SRC_BASE))
 INDEX					=	1	
-DELTA					=	$$(expr $$(tput cols) - 48)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	@ar rc $(NAME) $(OBJS)
 	@ranlib $(NAME)
-	@echo "\033[$$(tput cols)D✅ \033[40C\033[K\c"
-	@echo "\n\033[48;5;15;38;5;25;1mMAKE $(NAME) DONE$(RESET)"
+	@echo "\033[65D✅  \033[40C\033[K\c"
+	@echo "\n\033[K\033[48;5;15;38;5;25;1mMAKE $(NAME) DONE$(RESET)"
+	@echo "\033[?25h\c"
 
 $(OBJ_DIR)%.o:$(SRC_DIR)%.c
 	@$(eval DONE=$(shell echo $$(($(INDEX)*20/$(NB)))))
 	@$(eval PERCENT=$(shell echo $$(($(INDEX)*100/$(NB)))))
 	@$(eval COLOR=$(shell echo $$((89-$(PERCENT)/16))))
 	@$(eval TO_DO=$(shell echo $$((20-$(INDEX)*20/$(NB)))))
-	@printf "\r\033[38;5;11m⌛ MAKE	$(NAME): \033[48;5;$(COLOR)m%*s\033[45;1m%*s$(RESET)$(YELLOW) %2d%% $(RESET) \033[38;5;11m %*s$(RESET)" $(DONE) "" $(TO_DO) "" $(PERCENT) $(DELTA) "$@"
+	@echo "\033[?25l\033[65D\033[1A"
+	@printf "\r\033[38;5;11m⌛  MAKE $(NAME): \033[48;5;$(COLOR)m%*s\033[45;1m%*s$(RESET)$(YELLOW) %3d%% $(RESET) \033[38;5;11m %20s$(RESET)" $(DONE) "" $(TO_DO) "" $(PERCENT) "$(notdir $@)"
 	@mkdir -p $(dir $@)
 	@gcc $(FLAG) -c $< -o $@
 	@$(eval INDEX=$(shell echo $$(($(INDEX)+1))))
@@ -101,7 +102,7 @@ clean:
 	@echo "\033[D\033[K$(GREEN)			[ OK ]$(RESET)"
 
 fclean:	clean
-	@echo "$(YELLOW)Clean	libft.a⌛\c$(RESET)"
+	@echo "$(YELLOW)Clean	$(NAME)⌛\c$(RESET)"
 	@/bin/rm -rf $(NAME)
 	@echo "\033[D\033[K$(GREEN)			[ OK ]$(RESET)"
 
